--- a/build-docker-compose.yml
+++ b/build-docker-compose.yml
@@ -10,11 +10,11 @@ services:
     working_dir: /app
     volumes:
       #将npm目录映射出来，公共
-      - /home/liangyu/my_node/comment_npm_lib/:/usr/local/lib
+      #- /home/liangyu/my_node/comment_npm_lib/:/usr/local/lib
       #jenkins执行的时候，   ./是项目的路径
       - ./:/app
       #这里啊琛哥确认编译之后的文件目录
-    command: npm install && npm run build
+    command: npm cache clean -f && npm install -g n
     #设置环境变量
     networks:
       - node_build
