--- a/build-docker-compose.yml
+++ b/build-docker-compose.yml
@@ -14,7 +14,12 @@ services:
       #jenkins执行的时候，   ./是项目的路径
       - ./:/app
       #这里啊琛哥确认编译之后的文件目录
-    command: npm cache clean -f && npm install -g n
+    command:
+    - /bin/sh
+    -  -c
+    - |
+      npm install -g n
+      npm install
     #设置环境变量
     networks:
       - node_build
