--- a/build-docker-compose.yml
+++ b/build-docker-compose.yml
@@ -18,8 +18,8 @@ services:
     - /bin/sh
     -  -c
     - |
-      npm install -g n
       npm install
+      npm run build
     #设置环境变量
     networks:
       - node_build
