--- a/build-docker-compose.yml
+++ b/build-docker-compose.yml
@@ -10,16 +10,12 @@ services:
     working_dir: /app
     volumes:
       #将npm目录映射出来，公共
-      #- /home/liangyu/my_node/comment_npm_lib/:/usr/local/lib
+      - /home/liangyu/laughing_zhu_node/node_modules:/app/node_modules
       #jenkins执行的时候，   ./是项目的路径
       - ./:/app
+      - /home/liangyu/laughing_zhu_node/project/user-system-fornt:/app/dist
       #这里啊琛哥确认编译之后的文件目录
-    command:
-    - /bin/sh
-    -  -c
-    - |
-      npm install
-      npm run build
+    command: yarn
     #设置环境变量
     networks:
       - node_build
