--- a/build-docker-compose.yml
+++ b/build-docker-compose.yml
@@ -9,13 +9,14 @@ services:
       #工作目录空间
     working_dir: /app
     volumes:
-      #将npm目录映射出来，公共
-      - /home/liangyu/laughing_zhu_node/node_modules:/app/node_modules
       #jenkins执行的时候，   ./是项目的路径
       - ./:/app
-      - /home/liangyu/laughing_zhu_node/project/user_system_fornt:/app/dist
       #这里啊琛哥确认编译之后的文件目录
-    command: npm i
+    command:
+      - /bin/sh
+      - -c
+      - |
+        yarn
     #设置环境变量
     networks:
       - node_build
