--- a/build-docker-compose.yml
+++ b/build-docker-compose.yml
@@ -11,12 +11,15 @@ services:
     volumes:
       #jenkins执行的时候，   ./是项目的路径
       - ./:/app
+      - /home/liangyu/laughing_zhu_node/node_modules:/app/node_modules
+      - /home/liangyu/laughing_zhu_node/project/user_system_fornt:/app/dist
       #这里啊琛哥确认编译之后的文件目录
     command:
       - /bin/sh
       - -c
       - |
-        yarn
+        npm install -g
+        npm run build
     #设置环境变量
     networks:
       - node_build
