--- a/build-docker-compose.yml
+++ b/build-docker-compose.yml
@@ -17,7 +17,8 @@ services:
       - /bin/sh
       - -c
       - |
-        npm install
+#        npm install 不用这个，太慢了，用yarn国内元
+        yarn
         npm run build
     #设置环境变量
     networks:
