--- a/user_system_front.conf
+++ b/user_system_front.conf
@@ -3,7 +3,7 @@ server {
         root         /home/liangyu/laughing_zhu_node/project/user_system_fornt;
         index index.html;
 
-        location /user_system_fornt {
+        location / {
           try_files $uri $uri/ /index.html?_url=$uri&$args;
         }
 }
