--- a/user_system_front.conf
+++ b/user_system_front.conf
@@ -4,6 +4,8 @@ server {
         index index.html;
 
         location / {
-          try_files $uri $uri/ /index.html?_url=$uri&$args;
+
+          try_files $uri $uri/ /index.html?args;
+
         }
 }
