--- a/user_system_front.conf
+++ b/user_system_front.conf
@@ -1,5 +1,6 @@
 server {
         listen       8081;
+        server_name  106.12.76.73;
         root         /home/liangyu/laughing_zhu_node/project/user_system_fornt;
         index index.html;
 
