--- a/user_system_front.conf
+++ b/user_system_front.conf
@@ -1,10 +1,7 @@
 server {
         listen       8081;
-        server_name  106.12.76.73;
+        server_name  localhost;
         root         /home/liangyu/laughing_zhu_node/project/user_system_fornt;
         index index.html;
 
-        location / {
-
-        }
 }
