--- a/user_system_front.conf
+++ b/user_system_front.conf
@@ -4,4 +4,7 @@ server {
         root         /home/liangyu/laughing_zhu_node/project/user_system_fornt;
         index index.html;
 
+        location / {
+
+        }
 }
