--- a/user_system_front.conf
+++ b/user_system_front.conf
@@ -3,7 +3,8 @@ server {
         server_name  localhost;
         root         /home/liangyu/laughing_zhu_node/project/user_system_fornt;
         index index.html;
-
+        access_log  logs/user_system.fornt.access.log  main;
+        
         location / {
 
         }
